unpackaged/main/default/objects/Account/fields/AFS_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>AFS_Account_ID__c</fullName>
    <description>created for US - 236</description>
    <externalId>true</externalId>
    <inlineHelpText>This is AFS Legacy Account legacy external ID</inlineHelpText>
    <label>AFS Account ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>