unpackaged/main/default/objects/Account/fields/AGIntegrated_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>AGIntegrated_Account_ID__c</fullName>
    <description>created for US - 236</description>
    <externalId>true</externalId>
    <inlineHelpText>This is AGIntegrated Legacy Account legacy external ID</inlineHelpText>
    <label>AGIntegrated Account ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>