unpackaged/main/default/objects/Account/fields/Agrian_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Agrian_Account_ID__c</fullName>
    <description>created for US - 236</description>
    <externalId>true</externalId>
    <inlineHelpText>This is Agrian Legacy Account external ID</inlineHelpText>
    <label>Agrian Account ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>