unpackaged/main/default/objects/Account/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>created for TAGCRM-853</description>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>