unpackaged/main/default/objects/Account/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <description>TAGCRM-234</description>
    <displayFormat>A-{0000000}</displayFormat>
    <inlineHelpText>Customer ID of Account</inlineHelpText>
    <label>Customer ID</label>
    <type>AutoNumber</type>
</CustomField>