unpackaged/main/default/objects/Account/fields/Customer_System_Stack__c.field-meta.xml
<CustomField>
    <fullName>Customer_System_Stack__c</fullName>
    <description>created for TAGCRM-201</description>
    <inlineHelpText>Select Customer System Stack which caused the account to be won/lost</inlineHelpText>
    <label>Customer System Stack</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Software</valueSetName>
    </valueSet>
</CustomField>