unpackaged/main/default/objects/Account/fields/Enterprise_ID__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_ID__c</fullName>
    <label>Enterprise ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>