unpackaged/main/default/objects/Account/fields/Equipment_Application_Method__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Application_Method__c</fullName>
    <label>Equipment Application Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Sub_Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Ground</fullName>
            </value>
            <value>
                <fullName>Ground &amp; Air</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>