unpackaged/main/default/objects/Account/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <description>making it Multi Picklist as per TAGCRM-940</description>
    <label>Equipment Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Vertical__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Amity/Concord</fullName>
            </value>
            <value>
                <fullName>Bourgault</fullName>
            </value>
            <value>
                <fullName>CIH</fullName>
            </value>
            <value>
                <fullName>Clean Seed</fullName>
            </value>
            <value>
                <fullName>Flexicoil</fullName>
            </value>
            <value>
                <fullName>Horsch</fullName>
            </value>
            <value>
                <fullName>John Deere</fullName>
            </value>
            <value>
                <fullName>Morris</fullName>
            </value>
            <value>
                <fullName>New Holland</fullName>
            </value>
            <value>
                <fullName>Nova</fullName>
            </value>
            <value>
                <fullName>Pattison</fullName>
            </value>
            <value>
                <fullName>Pottenger</fullName>
            </value>
            <value>
                <fullName>Salford</fullName>
            </value>
            <value>
                <fullName>Seed Hawk</fullName>
            </value>
            <value>
                <fullName>Seed Master</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>