unpackaged/main/default/objects/Account/fields/Exclude_for_Report__c.field-meta.xml
<CustomField>
    <fullName>Exclude_for_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Implement to give the ability to mark a record to be omitted from Reports</description>
    <inlineHelpText>Mark this field and filter reports to ignore this account.</inlineHelpText>
    <label>Exclude for Report</label>
    <type>Checkbox</type>
</CustomField>