unpackaged/main/default/objects/Account/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ag/Chem Manufacturer</fullName>
            </value>
            <value>
                <fullName>Ag Input Retailer/Distributor</fullName>
            </value>
            <value>
                <fullName>CPG (Manufacturer)</fullName>
            </value>
            <value>
                <fullName>Crop Consultants</fullName>
            </value>
            <value>
                <fullName>Crop Insurance</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Equipment Company</fullName>
            </value>
            <value>
                <fullName>ERP Management</fullName>
            </value>
            <value>
                <fullName>Farm</fullName>
            </value>
            <value>
                <fullName>ISV (Independent software vendor)</fullName>
            </value>
            <value>
                <fullName>Lab Company</fullName>
            </value>
            <value>
                <fullName>Ranch</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Sales Agency/ Food Broker</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>