unpackaged/main/default/objects/Account/fields/Last_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Date__c</fullName>
    <description>created for TAGCRM-282, last contact date of account</description>
    <label>Last Contact Date</label>
    <type>Date</type>
</CustomField>