unpackaged/main/default/objects/Account/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>Used for Data Migration purposes - Part of ticket 993</description>
    <label>Legacy ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>