unpackaged/main/default/objects/Account/fields/LinkedIn_Bio__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Bio__c</fullName>
    <description>created for TAGCRM-857</description>
    <label>LinkedIn Bio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>