unpackaged/main/default/objects/Account/fields/MuddyBoots_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>MuddyBoots_Account_ID__c</fullName>
    <description>created for US - 236</description>
    <externalId>true</externalId>
    <inlineHelpText>This is MuddyBoots Legacy Account  external ID</inlineHelpText>
    <label>MuddyBoots Account ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>