unpackaged/main/default/objects/Account/fields/Non_Organic__c.field-meta.xml
<CustomField>
    <fullName>Non_Organic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Organic</label>
    <type>Checkbox</type>
</CustomField>