unpackaged/main/default/objects/Account/fields/Organic__c.field-meta.xml
<CustomField>
    <fullName>Organic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>created for TAGCRM-1026</description>
    <inlineHelpText>Please specify whether the Company for the Account has a specialty in Organic product</inlineHelpText>
    <label>Organic</label>
    <type>Checkbox</type>
</CustomField>