unpackaged/main/default/objects/Account/fields/Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry__c</fullName>
    <label>Sub Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party Applicator</fullName>
            </value>
            <value>
                <fullName>3rd Party Sampler</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Aggregator</fullName>
            </value>
            <value>
                <fullName>Agronomist</fullName>
            </value>
            <value>
                <fullName>AIP (Approved Insurance Provider)</fullName>
            </value>
            <value>
                <fullName>Beef producer</fullName>
            </value>
            <value>
                <fullName>Chemical Manufacturer</fullName>
            </value>
            <value>
                <fullName>Co-Operative</fullName>
            </value>
            <value>
                <fullName>Custom Services</fullName>
            </value>
            <value>
                <fullName>Dairy producer</fullName>
            </value>
            <value>
                <fullName>Distributor/Logistics</fullName>
            </value>
            <value>
                <fullName>Equipment Dealer</fullName>
            </value>
            <value>
                <fullName>Equipment Manufacturer</fullName>
            </value>
            <value>
                <fullName>Farm Mgmt Company</fullName>
            </value>
            <value>
                <fullName>Fertilizer Manufacturer</fullName>
            </value>
            <value>
                <fullName>Financial &amp; Banking</fullName>
            </value>
            <value>
                <fullName>FMIS (Farm Management Information System)</fullName>
            </value>
            <value>
                <fullName>Food Retailer</fullName>
            </value>
            <value>
                <fullName>Full Service Location</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Hedge-Fund/Investment Company</fullName>
            </value>
            <value>
                <fullName>High Value Crop Grower</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Lab Company</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Permanent Crop Grower</fullName>
            </value>
            <value>
                <fullName>Precision Consultant</fullName>
            </value>
            <value>
                <fullName>Processor</fullName>
            </value>
            <value>
                <fullName>Restaurants/Quick Serve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>