unpackaged/main/default/objects/Account/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <description>created for TAGCRM-433</description>
    <inlineHelpText>pick the time zone of the account</inlineHelpText>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TimeZone</valueSetName>
    </valueSet>
</CustomField>