unpackaged/main/default/objects/Account/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agri-Business</fullName>
            </value>
            <value>
                <fullName>Agri-Food</fullName>
            </value>
            <value>
                <fullName>Farm &amp; Ranch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>