unpackaged/main/default/objects/Account/fields/Year_Founded__c.field-meta.xml
<CustomField>
    <fullName>Year_Founded__c</fullName>
    <description>Captures the year the Account was founded</description>
    <label>Year Founded</label>
    <length>4</length>
    <type>Text</type>
</CustomField>