unpackaged/main/default/objects/Account/recordTypes/Internal_Account.recordType-meta.xml
<RecordType>
    <fullName>Internal_Account</fullName>
    <active>true</active>
    <label>Internal Account</label>
</RecordType>