unpackaged/main/default/objects/Account/validationRules/AccountStageIsDraft_when_Acc_is_created.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountStageIsDraft_when_Acc_is_created</fullName>
    <active>true</active>
    <description>Created for TAGCRM-141, 405</description>
    <errorConditionFormula>ISNEW() &amp;&amp;  NOT(ISPICKVAL( Account_Stage__c , &apos;Draft&apos;))</errorConditionFormula>
    <errorMessage>Please choose Account Stage as Draft</errorMessage>
</ValidationRule>