unpackaged/main/default/objects/Account/validationRules/cant_upd_Industry_whn_AccStatus_is_Draft.validationRule-meta.xml
<ValidationRule>
    <fullName>cant_upd_Industry_whn_AccStatus_is_Draft</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; NOT(ISPICKVAL(  Account_Stage__c  , &apos;Draft&apos;)) &amp;&amp; ISCHANGED( Industry__c )</errorConditionFormula>
    <errorMessage>Industry cannot be updated once Account Stage is not draft.</errorMessage>
</ValidationRule>