unpackaged/main/default/objects/Account/validationRules/StagecanchangedonlybyDataGovernance.validationRule-meta.xml
<ValidationRule>
    <fullName>StagecanchangedonlybyDataGovernance</fullName>
    <active>true</active>
    <description>Created for TAGCRM-746</description>
    <errorConditionFormula>AND(
$Profile.Name != &quot;System Administrator&quot;,
NOT($Permission.Account_Status_Update),
ISCHANGED(Account_Stage__c)
)</errorConditionFormula>
    <errorMessage>Only Data Governance Members are allowed to change.</errorMessage>
</ValidationRule>