unpackaged/main/default/objects/Account/validationRules/ValidateFieldsOnDraftStage.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateFieldsOnDraftStage</fullName>
    <active>true</active>
    <description>If the stage is Draft then Industry and Vertical are required.</description>
    <errorConditionFormula>AND
( 
 ISPICKVAL(Account_Stage__c,&quot;Draft&quot;),
OR(
 ISPICKVAL( Industry__c  ,&quot;&quot;),
 ISPICKVAL(Vertical__c,&quot;&quot;)
),
$RecordType.Name = &quot;Customer&quot; 
)</errorConditionFormula>
    <errorMessage>Please save Industry and Vertical first for Customer Accounts.</errorMessage>
</ValidationRule>